--- a/src/main/webapp/resources/admin/css/user_v1_1.css
+++ b/src/main/webapp/resources/admin/css/user_v1_1.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 /* Reset */
 html,body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,img { margin:0; padding:0; }
 html { width:100%; height:100%; overflow-y: scroll; }
@@ -655,7 +655,6 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance: none; marg
 
 /* btnDevice */
 .btnDevice { overflow:hidden; display:inline-block; position:relative; width:36px; height:60px; font-size:1px; line-height:0; color:transparent; white-space:nowrap; text-indent:150%; vertical-align:top; }
-.btnDevice:before { content:""; position:absolute; top:12px; left:0; width:36px; height:36px; background-image:url('//img.cafe24.com/img/user/images/sfix_icon.png'); background-repeat:no-repeat; }
 .btnDevice.selected:after { content:""; position:absolute; left:0; bottom:0; width:100%; height:3px; background:#2dc26b;; }
 .btnDevice.pc:before { background-position:0 -100px; }
 .btnDevice.pc.selected:before { background-position:0 -150px; }
@@ -720,7 +719,7 @@ body.iframe.mobile #wrap.easiest .gFrame { width:360px; height:720px; margin-top
 
     /* headingArea */
     .headingArea { padding:100px 0 40px; box-sizing:border-box; }
-    .headingArea .cafe24Logo { height:17px; }
+    .headingArea .jobhubLogo { width:240; height: auto; }
 
     /* mLayer */
     .mLayer { margin:24px; overflow-y:auto; }
