--- a/src/main/webapp/resources/css/people.css
+++ b/src/main/webapp/resources/css/people.css
@@ -71,7 +71,8 @@ li{
     vertical-align: top;
     width: 210px;
 }
-img {
+
+div.img_area img {
     float:left;
     width:210px;
     height:210px;
